Remove workflow files

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,14 +35,14 @@ target 'Runner' do
   
 end
 
-# 统一的 post_install 处理
 post_install do |installer|
-  # APN推送设置
+  
   installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
-      config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'NO'
+      target.build_configurations.each do |config|
+        config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'NO'
+      end
+      flutter_additional_ios_build_settings(target)
     end
-  end
   
   # HandyJSON 优化设置 - 解决编译问题
   installer.pods_project.targets.each do |target|
@@ -71,4 +71,3 @@ post_install do |installer|
     strip_bitcode_from_framework(bitcode_strip_path, framework_relative_path)
   end
 end
-
