Remove workflow files

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -33,6 +33,10 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>Aimaa needs access to camera for video calls and taking photos for chat.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Aimaa want uses your location data continuously to display users near you, enhancing your social interactions and recommendations. If you deny this permission, nearby users will not be shown.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Aimaa requires your location while using the app to provide location-based features, such as finding nearby events, connecting with local users, and delivering relevant content based on your area.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Aimaa needs access to microphone for video calls and recording voice messages in chat.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
